fix dark mode border color initialization

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ div {
 }
 
 #header {
-  border-bottom: 1px solid black;
+  border-bottom: var(--border);
   margin-top: auto;
 }
 
